--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </div>
 
 
-<script src="script.js"></script>
+<script src="question-1.js"></script>
+<script src="question-2.js"></script>
 </body>
 </html>
